--- a/03_chapter/03_03-multiple_weights_and_data.ipynb
+++ b/03_chapter/03_03-multiple_weights_and_data.ipynb
@@ -2,42 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weight = 0.1\n",
-    "def neural_network(input, weight):\n",
-    "    prediction = input * weight\n",
-    "    return prediction"
+    "def w_sum(a,b):\n",
+    "    assert(len(a) == len(b))\n",
+    "    output = 0\n",
+    "    \n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "        \n",
+    "    return output\n",
+    "\n",
+    "weights = [0.1, 0.2, 0]\n",
+    "def neural_network(input, weights):\n",
+    "    pred = w_sum(input, weights)\n",
+    "    return pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8500000000000001\n"
+      "0.9800000000000001\n"
      ]
     }
    ],
    "source": [
-    "number_of_toes = [8.5, 9.5, 10, 9]\n",
-    "input = number_of_toes[0]\n",
-    "pred = neural_network(input, weight)\n",
+    "toes = [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "input = [toes[0], wlrec[0], nfans[0]]\n",
+    "\n",
+    "pred = neural_network(input, weights)\n",
     "print(pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
