wrote neural networks from memory

--- a/06_chapter/06_Neural-Network-Test2.ipynb
+++ b/06_chapter/06_Neural-Network-Test2.ipynb
@@ -23,14 +23,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Fehler: 0.6342311598444467\nFehler: 0.35838407676317513\nFehler: 0.0830183113303298\nFehler: 0.006467054957103705\nFehler: 0.0003292669000750734\nFehler: 1.5055622665134859e-05\n"
+      "Error: 0.6342311598444467\nError: 0.35838407676317513\nError: 0.0830183113303298\nError: 0.006467054957103705\nError: 0.0003292669000750734\nError: 1.5055622665134859e-05\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "import numpy as np\n",
     "np.random.seed(1)\n",
     "\n",
-    "# relu functions\n",
+    "# set relu functions\n",
     "def relu(x):\n",
     "    return (x > 0) * x\n",
     "\n",
@@ -59,45 +59,45 @@
     "    [1, 1, 0, 0]\n",
     "]).T\n",
     "\n",
-    "# init control variables\n",
-    "hidden_layer_node_count = 4\n",
+    "# set alpha and hidden layer node count\n",
     "alpha = 0.2\n",
+    "hidden_layer_node_count = 4\n",
     "\n",
-    "# prepare weights of layers\n",
-    "weights_0_1 = 2 * np.random.random((3, hidden_layer_node_count)) - 1\n",
-    "weights_1_2 = 2 * np.random.random((hidden_layer_node_count, 1)) - 1\n",
+    "# prepare random weights for layer one and layer two\n",
+    "weights_1 = 2 * np.random.random((3, hidden_layer_node_count)) - 1\n",
+    "weights_2 = 2 * np.random.random((hidden_layer_node_count, 1)) - 1\n",
     "\n",
-    "# training iteration => 60 iterations\n",
+    "# training iteration => 60\n",
     "for iteration in range(60):\n",
+    "    # set layer two error to 0\n",
     "    layer_2_error = 0\n",
-    "    \n",
-    "    # train every input combination\n",
-    "    for i in range(len(streetlights)):\n",
     "\n",
-    "        # load input data\n",
+    "    # iterate over input sets\n",
+    "    for i in range(len(streetlights)):\n",
+    "        # read in layer zero (input layer) values\n",
     "        layer_0 = streetlights[i:i+1]\n",
     "\n",
-    "        # calculate layer one preditiction\n",
-    "        layer_1 = relu(np.dot(layer_0, weights_0_1))\n",
+    "        # calculate layer one prediction\n",
+    "        layer_1 = relu(np.dot(layer_0, weights_1))\n",
     "\n",
     "        # calculate layer two prediction\n",
-    "        layer_2 = np.dot(layer_1, weights_1_2)\n",
+    "        layer_2 = np.dot(layer_1, weights_2)\n",
     "\n",
-    "        # calculate weighted sum error of layer 2\n",
+    "        # calculate layer two error\n",
     "        layer_2_error += np.sum((layer_2 - walk_or_stop[i:i+1]) ** 2)\n",
     "\n",
-    "        # calculate delta of layer 2\n",
+    "        # calculate layer two delta\n",
     "        layer_2_delta = layer_2 - walk_or_stop[i:i+1]\n",
     "\n",
-    "        # calculate delta of layer 1\n",
-    "        layer_1_delta = layer_2_delta.dot(weights_1_2.T) * relu2Derivative(layer_1)\n",
+    "        # calculate layer one delta\n",
+    "        layer_1_delta = layer_2_delta.dot(weights_2.T) * relu2Derivative(layer_1)\n",
     "\n",
     "        # change weights\n",
-    "        weights_0_1 -= alpha * layer_0.T.dot(layer_1_delta)\n",
-    "        weights_1_2 -= alpha * layer_1.T.dot(layer_2_delta)\n",
-    "    \n",
+    "        weights_1 -= alpha * layer_0.T.dot(layer_1_delta)\n",
+    "        weights_2 -= alpha * layer_1.T.dot(layer_2_delta)\n",
+    "\n",
     "    if iteration % 10 == 9:\n",
-    "        print(\"Fehler: \" + str(layer_2_error))"
+    "        print(\"Error: \" + str(layer_2_error))"
    ]
   },
   {
